manifests-2/canary-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: canary-service
  namespace: canary-deployment

spec:
  selector:
    app: canary-demo

  ports:
  - port: 80
    targetPort: 80
