manifests-2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: canary-ingress
  namespace: canary-deployment

spec:
  ingressClassName: nginx

  rules:
  - http:
      paths:

      - path: /
        pathType: Prefix

        backend:
          service:
            name: stable-service
            port:
              number: 80
